# HGT_Net

./: README.md
HGT_Net_Code/: README.md  pyproject.toml
HGT_Net_Code/configs/: olist_hgt.yaml
HGT_Net_Code/data/: README.md
HGT_Net_Code/scripts/: train_baselines.py  train_olist_graph.py
HGT_Net_Code/src/hgtnet/: __init__.py  utils.py
HGT_Net_Code/src/hgtnet/data/: olist.py  olist_graph.py  ospi.py  validation.py
HGT_Net_Code/src/hgtnet/models/: mlp.py  olist_hgt.py  ospi_transformer.py
configs/: ospi_transformer.yaml
scripts/: train_ospi.py
src/hgtnet/: config.py
src/hgtnet/data/: olist.py
src/hgtnet/training/: early_stopping.py  losses.py  metrics.py
