[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hgtnet"
version = "0.1.0"
description = "HGT-Net code for e-commerce retention and purchase-intention prediction."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "HGT-Net Authors" }]

[tool.setuptools.packages.find]
where = ["src"]
